# Self-Documenting-Zero-Knowledge-MCP-Server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  legacy_store.db  pyproject.toml  requirements.txt  server.py  test_client.py
.github/workflows/: ci.yml
docs/: APPROACH.md  architecture.drawio
sample_data/: seed_legacy_db.py
src/: __init__.py  crud_generator.py  introspector.py  join_analyzer.py  schema_registry.py  security.py  sql_templates.py
tests/: demo_client.py  test_crud.py  test_introspector.py  test_joins.py  test_security.py
